--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+p {
+  margin: 0.2rem;
+}
+
+button {
+  margin: 0;
+  padding: 0.4rem;
+}
