Change to class components

--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -69,4 +69,4 @@ button:active {
 .c4 {
   background-color: orange;
 }
-/*# sourceMappingURL=Calc.css.map */
+/*# sourceMappingURL=Calculator.css.map */
