--- a/src/components/Calculator.scss
+++ b/src/components/Calculator.scss
@@ -7,6 +7,8 @@
   grid-template-rows: repeat(6, 1fr);
   color: #000;
   background-color: #ddd;
+  width: 100%;
+  max-width: 100vh;
 }
 
 .line {
@@ -31,7 +33,8 @@
   grid-template-columns: 2fr 1fr 1fr;
 }
 
-.display {
+.calc-display {
+  font-size: 2rem;
   display: flex;
   justify-content: flex-end;
   color: #ddd;
@@ -43,13 +46,13 @@
 }
 
 button {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #333;
   background-color: #fff;
   border: solid #ccc 0.1rem;
   min-width: 4rem;
   min-height: 2.6rem;
-  height: 10vw;
+  height: 10vh;
   padding: 0.4rem;
   cursor: pointer;
 }
@@ -59,9 +62,20 @@ button:hover {
 }
 
 button:active {
+  font-size: 1.6rem;
   background-color: #aaa;
+  font-weight: bolder;
 }
 
 .c4 {
   background-color: orange;
 }
+
+.c4:hover {
+  background-color: rgb(255, 176, 30);
+}
+
+.c4:active {
+  background-color: rgb(187, 121, 0);
+}
+
